@@ -1,3 +1,8 @@
+2007-08-14  Andrew Haley  <aph@redhat.com>
+
+	* decl.c (java_init_decl_processing): Call "__cxa_end_cleanup"
+	when using the ARM EABI.
+
 2007-07-16  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	PR target/32462
